[tool.poetry]
name = "amipwned"
version = "0.2.0"
description = "A minimal self-hosted haveibeenpwned application."
authors = ["Michael <michael@dubell.io>"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: AsyncIO"
]
homepage = "https://github.com/mjdubell/amipwned"
repository = "https://github.com/mjdubell/amipwned"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.5"
cchardet = "^2.1"
aiodns = "^2.0"
aioredis = "^1.2"
asyncpg = "^0.18.3"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.scripts]
amipwned = "amipwned.amipwned:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
